<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/settings_background_light_gray"
>
    <Toolbar android:layout_width="match_parent" android:layout_height="56dp"
             app:layout_constraintTop_toTopOf="parent"
             android:elevation="4dp"
             android:background="@color/settings_background"
             android:title="@string/developer_options_view_title_text"
             android:navigationIcon="@drawable/ic_menu_white"
             android:titleTextColor="@color/white"
             android:id="@+id/title_bar">
    </Toolbar>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/rideos_env_spinner"
            app:layout_constraintWidth_default="percent" app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/environment_warning_text"
            android:dropDownWidth="match_parent"
            android:layout_marginTop="4dp"
            android:background="?attr/rideos.primary_background_color" android:paddingStart="12dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/fleet_id_spinner"
            app:layout_constraintWidth_default="percent" app:layout_constraintWidth_percent="0.5"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/active_fleet_title"
            app:layout_constraintStart_toStartOf="parent" android:dropDownWidth="match_parent"
            android:background="?attr/rideos.primary_background_color" android:paddingStart="12dp"/>
    <TextView
            android:text="@string/developer_option_environment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/environment_title" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title_bar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:textAllCaps="true"
            android:textColor="?attr/rideos.settings_heading_color"/>
    <TextView
            android:text="Changing your environment will require an app restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/environment_warning_text"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/environment_title" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/developer_option_active_fleet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/active_fleet_title" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rideos_env_spinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:textAllCaps="true"
            android:textColor="?attr/rideos.settings_heading_color"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fleet_id_spinner"
            android:paddingBottom="8dp"
            android:background="?attr/rideos.primary_background_color"
            android:id="@+id/fleet_container">

        <TextView
                android:text="@string/developer_option_fleet_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/fleet_id_title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:textAllCaps="true"
                android:textColor="?attr/rideos.settings_sub_heading_color"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/fleet_id_field"
                app:layout_constraintTop_toBottomOf="@+id/fleet_id_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:layout_marginTop="4dp"
                android:textColor="?attr/rideos.primary_text_color"/>
        <TextView
                android:text="@string/developer_option_dispatch_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/dispatch_id_title"
                app:layout_constraintTop_toBottomOf="@+id/fleet_id_field" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:layout_marginTop="20dp" android:textAllCaps="true"
                android:textColor="?attr/rideos.settings_sub_heading_color"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/dispatch_id_field"
                app:layout_constraintTop_toBottomOf="@+id/dispatch_id_title"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                android:layout_marginTop="4dp" android:textColor="?attr/rideos.primary_text_color"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/fleet_container"
                 android:id="@+id/extra_settings_container"
                 android:layout_marginTop="24dp">

    </FrameLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version_name" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="?attr/rideos.primary_text_color"/>
</androidx.constraintlayout.widget.ConstraintLayout>
